# HackUMass-F25

./: .gitignore  CMakeLists.txt  README.md
model/: eye_tracking_model.py  gun.ino  requirements.txt  test_model.py
nordic/: nrf52dk_nrf52832.overlay  prj.conf
nordic/dts/bindings/: pwm-servo.yaml
nordic/src/: my_lbs.h
src/: main.c  my_lbs.c
